add_subdirectory(examples)
add_subdirectory(testRP)

enable_testing()
add_test(NAME is_running_checking                COMMAND testRP is_running_checking)
#add_test(NAME test_terminate                     COMMAND testRP test_terminate)
#add_test(NAME test_exit_code                     COMMAND testRP test_exit_code)
#add_test(NAME testTL                             COMMAND testRP testTL)
#add_test(NAME test_args                          COMMAND testRP test_args)
#add_test(NAME test_ml                            COMMAND testRP test_ml)
#add_test(NAME test_re                            COMMAND testRP test_re)
#add_test(NAME test_standard_streams_redirection  COMMAND testRP test_standard_streams_redirection)
#add_test(NAME test_il                            COMMAND testRP test_il)
#add_test(NAME test_interactive                   COMMAND testRP test_interactive)
#add_test(NAME test_exception                     COMMAND testRP test_exception)